--- a/index.html
+++ b/index.html
@@ -2,10 +2,63 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Micro-SaaS WhatsApp</title>
+    <title>Análise de Vendas - Projeto</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            background-color: #f7f7f7;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        h2 {
+            color: #34495e;
+        }
+        .card {
+            background-color: #fff;
+            padding: 20px;
+            margin: 15px 0;
+            border-radius: 8px;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+        }
+        ul {
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao Micro-SaaS WhatsApp!</h1>
-    <p>Aplicação rodando com Flask.</p>
+    <h1>Projeto de Análise de Vendas</h1>
+    <p>A empresa percebeu que o volume de vendas caiu nos últimos meses, mas não sabe exatamente em quais produtos, regiões ou canais de vendas isso aconteceu. Os dados estão em planilhas e sistemas internos, mas não foram analisados de forma consolidada.</p>
+
+    <div class="card">
+        <h2>Resumo da Análise</h2>
+        <ul>
+            <li>Produto mais vendido: <strong>Produto D</strong></li>
+            <li>Produto menos vendido: <strong>Produto C</strong></li>
+            <li>Região mais lucrativa: <strong>Norte</strong></li>
+            <li>Região com menor faturamento: <strong>Leste</strong></li>
+            <li>Canal mais forte: <strong>Online</strong></li>
+            <li>Canal mais fraco: <strong>Loja Física</strong></li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Recomendações</h2>
+        <ul>
+            <li>Focar marketing em produtos com baixa venda.</li>
+            <li>Investir em campanhas online para canais com maior potencial.</li>
+            <li>Reforçar estoque e atendimento nas regiões mais lucrativas.</li>
+        </ul>
+    </div>
+
+    <div class="card">
+        <h2>Próximos Passos</h2>
+        <ul>
+            <li>Consolidar dados reais da empresa em uma base única.</li>
+            <li>Automatizar relatórios periódicos de vendas.</li>
+            <li>Integrar dashboards interativos para gestores.</li>
+        </ul>
+    </div>
 </body>
 </html>
